--- a/css/App.scss
+++ b/css/App.scss
@@ -40,9 +40,11 @@ body {
 
             .add-icon {
                 margin-right: 10px;
-                padding-top: 3px;
+                padding: 0;
                 color: green;
                 font-weight: bold;
+                width: 20px;
+                height: 24px;
             }
 
             input {
